--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-CLOUD_NAME =dysltqpxs
-CLOUD_API_KEY =892845258851733
-CLOUD_API_SECRET=qQOepS3-BeNYLG3TxBJcsTIZmZ8
+CLOUD_NAME =dysl//
+CLOUD_API_KEY =//
+CLOUD_API_SECRET=//
